user-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-routes
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users
    - path:
        type: PathPrefix
        value: /user
    - path:
        type: PathPrefix
        value: /search/users
      method: GET
    - path:
        type: PathPrefix
        value: /search/users
      method: OPTIONS
    - path:
        type: PathPrefix
        value: /profile
    - path:
        type: PathPrefix
        value: /sessions
      method: POST
    backendRefs:
    - name: user-service
      port: 8000
